--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -20,7 +20,7 @@
   font-size: 26px;
 }
 .child {
-  padding: 0 15px;
+  padding: 0 20px;
   padding-bottom: 46px;
 }
 
