--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@ body {
   width: 100%;
   background-color: #fff;
   border-radius: 10px;
-  padding: 15px;
+  padding: 20px;
   padding-bottom: 0;
   display: flex;
   flex-direction: column;
